WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107773
[BlackBerry] It can't Select texts in main frame when the current focus is in a IFrame
https://bugs.webkit.org/show_bug.cgi?id=107773
Summary
[BlackBerry] It can't Select texts in main frame when the current focus is in...
Sean Wang
Reported
2013-01-23 18:45:37 PST
DESCRIPTION: When the focus is in a IFrame, touch hold in main frame, Nothing is happened, the selection visuals are not shown. HOW TO REPRODUCE: 1) Write some text and an iframe in a html file 2) load and touch on the iframe to change the focus. 3) touch and hold on the text in the main frame EXPECTED: the text should be selected. ACTUAL: Nothing happens, sometimes, the text in the iframe is selected.
Attachments
patch
(3.02 KB, patch)
2013-01-23 18:53 PST
,
Sean Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sean Wang
Comment 1
2013-01-23 18:53:11 PST
Created
attachment 184378
[details]
patch
WebKit Review Bot
Comment 2
2013-01-24 06:48:25 PST
Comment on
attachment 184378
[details]
patch Clearing flags on attachment: 184378 Committed
r140681
: <
http://trac.webkit.org/changeset/140681
>
WebKit Review Bot
Comment 3
2013-01-24 06:48:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug