[BlackBerry] It can't Select texts in main frame when the current focus is in a IFrame https://bugs.webkit.org/show_bug.cgi?id=107773

Patch by Sean Wang <Xuewen.Wang@torchmobile.com.cn> on 2013-01-24
Reviewed by Antonio Gomes.

PR285211 Internally reviewed by Genevieve Mak

When touch hold in the unfocused frame, it doesn't switch frame focus. Many
places in code depends on the webpage->forcusOrMainFrame(), including the
SelectionHandler, so it can't select in an unfocused frame. This patch switchs
frame focus when touch starts.

* WebKitSupport/TouchEventHandler.cpp:
(BlackBerry::WebKit::TouchEventHandler::doFatFingers):

Canonical link: https://commits.webkit.org/126010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140681 268f45cc-cd09-0410-ab3c-d52691b4dbfc